Fix menu item problem (hand cursor on Firefox and click outer the link)

--- a/client-ng1/src/app/less/main.less
+++ b/client-ng1/src/app/less/main.less
@@ -195,6 +195,9 @@ textarea {
     i{
       font-size: @link__font-size;
     }
+    .link{
+      cursor: pointer !important;
+    }
   }
 
   .cesar-menu__lang {
